[gd_scene load_steps=20 format=3 uid="uid://bq72cc6atm5yj"]

[ext_resource type="Script" path="res://scripts/phone.gd" id="1_66gw3"]
[ext_resource type="Texture2D" uid="uid://b0kncg2dc6w3f" path="res://assets/phone.svg" id="2_qvbv3"]
[ext_resource type="Script" path="res://scripts/tooltip.gd" id="3_1etf2"]
[ext_resource type="Texture2D" uid="uid://c0bmlbbe5b72d" path="res://assets/basic.png" id="3_g2vtx"]
[ext_resource type="Texture2D" uid="uid://cipjwui1m6oy4" path="res://assets/basicdark.png" id="4_dnf7c"]
[ext_resource type="Texture2D" uid="uid://dsbakv53n1fic" path="res://assets/primo.png" id="5_51k3e"]
[ext_resource type="Texture2D" uid="uid://4lgkkm74u07v" path="res://assets/delux.png" id="6_7pvtv"]
[ext_resource type="Texture2D" uid="uid://cbgo6xqwrjgt1" path="res://assets/primodark.png" id="7_qiewt"]
[ext_resource type="Texture2D" uid="uid://bljogo2nt51ux" path="res://assets/deluxdark.png" id="9_y0qvu"]

[sub_resource type="SystemFont" id="SystemFont_6qmlr"]
font_names = PackedStringArray("Comic Sans MS")

[sub_resource type="LabelSettings" id="LabelSettings_8ecrv"]
font = SubResource("SystemFont_6qmlr")
font_size = 8
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_qt7uj"]
font_names = PackedStringArray("Cursive")

[sub_resource type="LabelSettings" id="LabelSettings_ddxfk"]
font = SubResource("SystemFont_qt7uj")
font_size = 8
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_tkqgn"]
font_names = PackedStringArray("Cursive")

[sub_resource type="LabelSettings" id="LabelSettings_vpnty"]
font = SubResource("SystemFont_tkqgn")
font_size = 8
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_pg0sx"]
font_names = PackedStringArray("Impact")

[sub_resource type="LabelSettings" id="LabelSettings_aveum"]
font = SubResource("SystemFont_pg0sx")
font_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_un0lg"]
default_font_size = 12
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_2gkbi"]
font_names = PackedStringArray("Trebuchet MS")

[node name="Phone" type="Node2D"]
position = Vector2(1220, 380)
script = ExtResource("1_66gw3")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_qvbv3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -287.0
offset_right = 179.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 54.0
offset_top = 75.0
offset_right = 318.0
offset_bottom = 533.0

[node name="BoxContainer" type="BoxContainer" parent="Control"]
layout_mode = 0
offset_left = 54.0
offset_top = 75.0
offset_right = 265.0
offset_bottom = 533.0
alignment = 1
vertical = true

[node name="Button" type="TextureButton" parent="Control/BoxContainer"]
custom_minimum_size = Vector2(69, 69)
layout_direction = 2
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("3_g2vtx")
texture_pressed = ExtResource("4_dnf7c")

[node name="Label" type="Label" parent="Control/BoxContainer/Button"]
visible = false
top_level = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Cheap. Useful.
Nothing can go wrong!"
label_settings = SubResource("LabelSettings_8ecrv")
script = ExtResource("3_1etf2")

[node name="Button2" type="TextureButton" parent="Control/BoxContainer"]
custom_minimum_size = Vector2(69, 69)
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("5_51k3e")
texture_pressed = ExtResource("7_qiewt")

[node name="Label" type="Label" parent="Control/BoxContainer/Button2"]
visible = false
top_level = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Works faster than your average fish food,
and allows for more children"
label_settings = SubResource("LabelSettings_ddxfk")
script = ExtResource("3_1etf2")

[node name="Button3" type="TextureButton" parent="Control/BoxContainer"]
custom_minimum_size = Vector2(69, 69)
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("6_7pvtv")
texture_pressed = ExtResource("9_y0qvu")

[node name="Label" type="Label" parent="Control/BoxContainer/Button3"]
visible = false
top_level = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Extremely high mutation chance
for a little splash of color!"
label_settings = SubResource("LabelSettings_vpnty")
script = ExtResource("3_1etf2")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Ca$h money"
label_settings = SubResource("LabelSettings_aveum")

[node name="RichTextLabel" type="RichTextLabel" parent="Control/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 212)
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_un0lg")
theme_override_fonts/normal_font = SubResource("SystemFont_2gkbi")
scroll_active = false
scroll_following = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="mouse_entered" from="Control" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="Control/BoxContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/BoxContainer/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Control/BoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Control/BoxContainer/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="Control/BoxContainer/Button2" to="." method="_on_button_2_mouse_exited"]
[connection signal="pressed" from="Control/BoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="mouse_entered" from="Control/BoxContainer/Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="mouse_exited" from="Control/BoxContainer/Button3" to="." method="_on_button_3_mouse_exited"]
[connection signal="pressed" from="Control/BoxContainer/Button3" to="." method="_on_button_3_pressed"]
